--- a/src/app/modules/classes/classboard/classboard.component.html
+++ b/src/app/modules/classes/classboard/classboard.component.html
@@ -19,14 +19,14 @@
                 <mat-tab>
                     <ng-template mat-tab-label>
                         <mat-icon>payments
-                        </mat-icon> Fee Types
+                        </mat-icon> Fee Type
                     </ng-template>
                     <app-school-fee-types></app-school-fee-types>
                 </mat-tab>
 
                 <mat-tab>
                     <ng-template mat-tab-label>
-                        <mat-icon>foundation</mat-icon> Pre-requisites
+                        <mat-icon>foundation</mat-icon> Pre-requisite
                     </ng-template>
                     <app-classprerequisite></app-classprerequisite>
                 </mat-tab>
