--- a/src/app/modules/control/roleuser/roleuserdashboard/roleuserdashboard.component.html
+++ b/src/app/modules/control/roleuser/roleuserdashboard/roleuserdashboard.component.html
@@ -13,7 +13,7 @@
         <alert></alert>
         <div fxLayout="row" fxLayoutAlign="center center">
             <form [formGroup]="searchForm">
-                <mat-form-field [style.width.px]="250">
+                <mat-form-field [style.width.px]="250" appearance="outline">
                     <mat-label>Name</mat-label>
                     <input type="text" matInput formControlName="searchUserName" [matAutocomplete]="auto">
                     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
