--- a/src/app/modules/Accounting/trial-balance/trial-balance.component.html
+++ b/src/app/modules/Accounting/trial-balance/trial-balance.component.html
@@ -124,7 +124,7 @@
                     </button>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                    <button [disabled]="loading || CheckPermission=='read' || !element.Action" matTooltip="save"
+                    <button [disabled]="loading || Permission=='read' || !element.Action" matTooltip="save"
                         mat-mini-fab (click)="UpdateOrSave(element)">
                         <mat-icon>save</mat-icon>
                     </button>
