--- a/src/app/modules/classes/classboard/classboard.component.html
+++ b/src/app/modules/classes/classboard/classboard.component.html
@@ -3,7 +3,17 @@
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
         <div style="margin:5px">
-            <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChanged($event)">
+            <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
+                <mat-tab *ngFor="let component of components;let indx=index">
+                    <ng-template mat-tab-label>
+                        <mat-icon>{{tabNames[indx].faIcon}}</mat-icon> {{tabNames[indx].label}}
+                    </ng-template>
+                    <ng-template matTabContent>
+                        <div #container></div>
+                    </ng-template>
+                </mat-tab>
+            </mat-tab-group>
+            <!-- <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChanged($event)">
                 <mat-tab>
                     <ng-template mat-tab-label>
                         <mat-icon>loyalty</mat-icon> Detail
@@ -36,7 +46,7 @@
                     </ng-template>
                     <app-classmasterdashboard></app-classmasterdashboard>
                 </mat-tab>
-            </mat-tab-group>
+            </mat-tab-group> -->
         </div>
     </mat-card-content>
 </mat-card>
